# voxel-engine

./: .clang-format  .gitignore  CMakeLists.txt  README.md  imgui.ini
resources/shaders/: crosshair_fragment.glsl.frag  crosshair_vertex.glsl.vert  fragment.glsl.frag  skybox_fragment.glsl.frag  skybox_vertex.glsl.vert  vertex.glsl.vert  voxel_fragment.glsl.frag  voxel_vertex.glsl.vert
shaders/: fragment.glsl.frag  vertex.glsl.vert
src/: Application.cc  Application.hh  Block.cc  Block.hh  BlockSpecification.cc  BlockSpecification.hh  BlockType.hh  CMakeLists.txt  Chunk.cc  Chunk.hh  Light.cc  Renderer.cc  Renderer.hh  ThreadPool.cc  ThreadPool.hh  World.cc  World.hh  main.cc
src/OpenGL/: Camera3D.cc  Camera3D.hh  IndexBuffer.cc  IndexBuffer.hh  Shader.cc  Shader.hh  Texture.cc  Texture.hh  TextureCubeMap.cc  TextureCubeMap.hh  Vertex.hh  VertexArrayObject.cc  VertexArrayObject.hh  VertexBufferObject.cc  VertexBufferObject.hh  VoxelVertex.hh
src/Utils/: Logger.cc  Logger.hh  Utils.cc  Utils.hh
src/Vertex/: CrossHairVertex.hh  SkyBoxVertex.hh  VoxelVertex.hh
